<?xml version="1.0"?>
<package format ="2">
    <name>localization</name>
    <version>0.0.0</version>
    <description> localization package </description>

    <maintainer email = "taozhang1101cv@gmail.com">zhangtao</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>rosmsg</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>rosmsg</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>rosmsg</exec_depend>

    <export>

    </export>

</package>